test/data/semantic/bad/redefined_types.coy
struct S();

struct S();

fn main() -> () {
    ()
}
